--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "cradle": "0.6.7",
+    "cradle": "^0.6.7",
     "promise": "^7.0.3"
   }
 }
